# mate-terminal

./: meson.build
help/: meson.build
po/: meson.build
src/: meson.build
src/skey/: meson.build
