gnome.yelp('mate-terminal',
sources: [
	'index.docbook',
	'legal.xml'
	],

languages: [
	'C','bg', 'ca', 'cs', 'da', 'de', 'el', 'en_GB', 'es', 'fr', 'it',
	'ja', 'ko', 'oc', 'pt_BR', 'ro', 'ru', 'sv', 'uk', 'zh_CN', 'zh_TW'
	],
media: [
	'figures/mate-terminal-default.png',
	'figures/mate-terminal-tabbed.png'
]
)